--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -1,4 +1,7 @@
 ---
+# bring up diffs between this file and the BitbucketDataCenter.template, and JiraDataCenter.template.
+# As a rule, we should work to minimize our diffs between these files as best we can, so that future changes are easy to make across all supported CloudFormation templates.
+# Using YAML as our file format will allow us to put a block comment at the top of the file saying exactly this.
 AWSTemplateFormatVersion: 2010-09-09
 Description: QS(0034) Atlassian Confluence Data Center Oct,19,2016
 Metadata:
@@ -353,7 +356,7 @@ Resources:
             Action: ["sts:AssumeRole"]
       Path: /
       Policies:
-        - PolicyName: BitbucketClusterNodePolicy
+        - PolicyName: ConfluenceClusterNodePolicy
           PolicyDocument:
             Version: 2012-10-17
             Statement:
@@ -968,8 +971,3 @@ Outputs:
       - "${HTTP}://${LoadBalancerDNSName}"
       - HTTP: !If [DoSSL, "https", "http"]
         LoadBalancerDNSName: !GetAtt LoadBalancer.DNSName
-
-
-
-
-
