--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -969,6 +969,12 @@ Resources:
       ToPort: -1
       SourceSecurityGroupId: !Ref SecurityGroup
 Outputs:
+  ClusterNodeGroup:
+    Description: The name of the auto scaling group of Confluence cluster nodes
+    Value: !Ref ClusterNodeGroup
+  SynchronyClusterNodeGroup:
+    Description: The name of the auto scaling group of Synchrony cluster nodes
+    Value: !Ref SynchronyClusterNodeGroup
   URL:
     Description: The URL of the Bitbucket Data Center instance
     Value: !Sub
